--- a/src/main/resources/static/kakao.html
+++ b/src/main/resources/static/kakao.html
@@ -293,20 +293,17 @@
 <script> // 로직이 짜여지는 script part
 
 let idx = '';
-let keyword;
-$(document).ready(function () {
-    keyword = decodeURI(getParam('foodName'));
-    console.log(keyword)
-    keywordSearch()
-    getCurrentPosBtn()
-});
+let url = window.location.search;
+let params = new URLSearchParams(url);
+let keyword = params.get('foodName');
 
-function getParam(name) {
-    let results = new RegExp('[\?&amp;]' + name + '=([^&amp;#]*)').exec(window.location.href);
-    console.log('getParam')
-    console.log(results)
-    return results[1] || 0;
-}
+$(document).ready(function () {
+    console.log(keyword,'푸두네임')
+
+    getCurrentPosBtn()
+    clickedBtn()
+
+});
 
 
 let currentTest;
@@ -322,6 +319,11 @@ function locationLoadSuccess(position) {
     map.panTo(currentPos);
 
     currentTest = currentPos;
+    console.log(currentPos,"현재위치일까?")
+    console.log(currentTest,"현재위치일까? 전역함수네?")
+    //성공하면 키워드로 검색
+
+    keywordSearch()
 }
 
 function locationLoadError(position) {
@@ -334,7 +336,11 @@ function getCurrentPosBtn() {
 
 // 검색 버튼 클릭시
 function keywordSearch() {
-    getCurrentPosBtn()
+
+    console.log(currentTest,"이거는전역잘나오니?")
+
+    //getCurrentPosBtn()
+    console.log(keyword,"키워드는 무엇일까?")
     // let keyword = $('#keyword').val();
 
     // 검색 결과 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
@@ -366,12 +372,12 @@ function keywordSearch() {
 
         } else if (status === kakao.maps.services.Status.ZERO_RESULT) {
 
-            alert('검색 결과가 존재하지 않습니다.');
+            alert('주변에 그 음식을 판매하는 식당이 없는 것 같아요 ㅠㅠ');
             return;
 
         } else if (status === kakao.maps.services.Status.ERROR) {
 
-            alert('검색 결과 중 오류가 발생했습니다.');
+            alert('검색 중 오류가 발생했습니다. ㅠㅠ');
             return;
 
 
@@ -453,7 +459,7 @@ function keywordSearch() {
         }
 
         itemStr += '  <span class="tel">' + places.phone + '</span>' +
-            '</div>';
+            '</div>' + '<span class="badge text-dark" style="background-color:#5ee1b4; padding: 5px; margin-bottom: 10px;">식당 저장하기</span>';
 
         el.innerHTML = itemStr;
         el.className = 'item';
@@ -536,6 +542,47 @@ function keywordSearch() {
         }
     }
 }
+
+function clickedBtn(){
+    // 로딩 표시
+    showLoading();
+    // 로딩 숨기기(4초 후)
+    setTimeout("hideLoading()", 4000);
+}
+function showLoading(){
+    //화면의 높이와 너비를 구합니다.
+    var maskHeight = $(document).height();
+    var maskWidth  = window.document.body.clientWidth;
+
+    //화면에 출력할 마스크를 설정해줍니다.
+    var mask ="<div id='mask' style='position:absolute; z-index:1000; background-color:#000000; left:0; top:0;'></div>";
+
+    //화면에 레이어 추가
+    $('body')
+        .append(mask)
+
+    //마스크의 높이와 너비를 화면 것으로 만들어 전체 화면을 채웁니다.
+    $('#mask').css({
+        'width' : maskWidth
+        ,'height': maskHeight
+        ,'opacity' :'0.3'
+    });
+
+    $("#roadingStatus").show();
+}
+function hideLoading(){
+    $("#mask").remove();
+    $("#roadingStatus").hide();
+}
+
 </script>
+<div class="spinner-border roadingStatus" id="roadingStatus" role="status" style="display: none;position: absolute;
+top: 50%;
+left: 50%;
+z-index: 1;
+width: 3rem;
+height: 3rem;">
+    <span class="sr-only"></span>
+</div>
 </body>
 </html>
