--- a/src/main/resources/static/view.html
+++ b/src/main/resources/static/view.html
@@ -87,49 +87,78 @@
                         case "place" :
                             x = response.x;
                             y = response.y;
+                            let image1 = response.image != null ? `<img src="${response.image}">` : `<img src="https://thebestmeal.s3.ap-northeast-2.amazonaws.com/community/Jrvs74eUg7.jpg">`
                             let placeHtml = `
-                                <div>${response.title}</div>
-                                ${response.createdAt}<br/>
-                                ${response.content}<br/>
-                                ${response.placeName}<br/>
-                                ${response.placeUrl}<br/>
-                                ${response.placeAddress}<br/>
-                                <div id="map" style="width:500px; height:400px;"></div>
+                                <figure>
+                                  <blockquote class="blockquote">
+                                    <p>${response.title}</p>
+                                  </blockquote>
+                                  <p style="font-size: small; color:gray; text-align: right; margin-top:-15px">${response.user.nickname}, 작성일 : ${response.createdAt}</p>
+                                </figure>
+                                <hr>
+                                ${image1}
+                                <div><br/>${response.content}</div>
+                                <div id="map" style="width:100%; height:400px;"></div>
                                 `
                             $("#contentContainers").append(placeHtml);
-                            loadMap()
+                            loadMap(response)
                             break
                         case "vote" :
+                            let image2 = response.image != null ? `<img src="${response.image}">` : ``
                             let voteHtml = `
-                                <div>${response.title}</div>
-                                <div>${response.vote.option1Name}</div>
-                                <div>${response.vote.option1}</div>
-                                <div>${response.vote.option2Name}</div>
-                                <div>${response.vote.option2}</div>
-                                ${response.createdAt}<br/>
-                                ${response.content}<br/>
+                                <figure>
+                                  <blockquote class="blockquote">
+                                    <p>${response.title}</p>
+                                  </blockquote>
+                                  <p style="font-size: small; color:gray; text-align: right; margin-top:-15px">${response.user.nickname}, 작성일 : ${response.createdAt}</p>
+                                </figure>
+                                <hr>
+                                ${image2}
+                                <div><br/>${response.content}</div>
+                                <div class="option1" style="width: 400px; background-color: gainsboro; border-radius: 20px; text-align: center; margin:20px auto auto auto; padding: 20px;">${response.vote.option1Name} : ${response.vote.option1}<br><span class="badge bg-secondary" onclick="voteCount(${response.vote.voteId},'option1')">투표하기</span></div>
+                                <div class="option1" style="width: 400px; background-color: gainsboro; border-radius: 20px; text-align: center; margin:20px auto auto auto; padding: 20px;">${response.vote.option2Name} : ${response.vote.option2}<br><span class="badge bg-secondary" onclick="voteCount(${response.vote.voteId},'option2')">투표하기</span></div>
+
+                                <hr>
+                                <div>${response.food}</div>
                                 `
                             $("#contentContainers").append(voteHtml);
+                            for (let i = 0; i<response.comments.length; i++) {
+                                console.log(response.comments[i])
+                            }
+                            break
+                        case "chat" :
+                            let image = response.image != null ? `<img src="${response.image}">` : ``
+                            let chatHtml = `
+                                <figure>
+                                  <blockquote class="blockquote">
+                                    <p>${response.title}</p>
+                                  </blockquote>
+                                  <p style="font-size: small; color:gray; text-align: right; margin-top:-15px">${response.user.nickname}, 작성일 : ${response.createdAt}</p>
+                                </figure>
+                                <hr>
+                                ${image}
+                                <div><br/>${response.content}</div>
+                                <hr>
+                                <div>${response.food}</div>
+                                `
+                            $("#contentContainers").append(chatHtml);
                             for (let i = 0; i<response.comments.length; i++) {
                                 console.log(response.comments[i])
                             }
                     }
 
                     let commentHtml = `
-                    <div class="mb-3" id = ${id}>
+                    <div class="mb-3" style="text-align: right" >
                                         <textarea class="form-control" id="comment" rows="3" placeholder="댓글을 남겨주세요" style="height:50px;" ></textarea>
+                                        <span class="badge bg-secondary" onclick="postComment(${id})">댓글 올리기</span>
                                     </div>
-                                    <div class="col-12">
-                                            <button type="submit" class="btn btn-primary" onclick="postComment(${id})">Submit</button>
-                                        </div>
                     `
                     $("#commentContainers").append(commentHtml);
                     for (let i = 0; i<response.comments.length; i++) {
                         console.log(response.comments[i])
                         if (response.comments[i].user === []) {
                             let commentListHtml = `
-                                ${response.comments[i].comment}<br/>
-                                작성자 : 익명
+                                익명 : ${response.comments[i].comment}
                                 <div class="col-12">
                                     <button type="submit" class="btn btn-primary" onclick="deleteComment(${response.comments[i].id})">댓글 삭제하기</button>
                                 </div>
@@ -137,11 +166,9 @@
                             $("#commentList").append(commentListHtml);
                         } else {
                             let commentListHtml = `
-                                ${response.comments[i].comment}<br/>
-                                작성자 : ${response.comments[i].user.nickname}
-                                <div class="col-12">
-                                    <button type="submit" class="btn btn-primary" onclick="deleteComment(${response.comments[i].id})">댓글 삭제하기</button>
-                                </div>
+<hr>
+<p style="font-size: small; color:gray;">${response.comments[i].user.nickname}, 작성일 : ${response.comments[i].createdAt} <span class="badge bg-secondary" onclick="deleteComment(${response.comments[i].id})">댓글 삭제하기</span></p>
+                            ${response.comments[i].comment}
                             `
                             $("#commentList").append(commentListHtml);
                         }
@@ -150,7 +177,8 @@
             })
 
         })
-        function loadMap() {
+        function loadMap(response) {
+            console.log(response)
             let container = document.getElementById('map');
             let options = {
                 center: new kakao.maps.LatLng(y, x),
@@ -163,6 +191,19 @@
                 map: map,
                 position: new kakao.maps.LatLng(y, x)
             });
+
+            let iwContent = `<div style="padding:5px;">${response.placeName} <br>
+<span style="font-size: small">${response.placeAddress}<br><a href="${response.placeUrl}" style="text-decoration: none;" target="_blank">장소 정보 보기</a></span></div>`,
+                iwPosition = new kakao.maps.LatLng(y, x); //인포윈도우 표시 위치입니다
+
+            // 인포윈도우를 생성합니다
+            let infowindow = new kakao.maps.InfoWindow({
+                position : iwPosition,
+                content : iwContent
+            });
+
+            // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+            infowindow.open(map, marker);
 
             setZoomable(false)
 
@@ -185,17 +226,15 @@
                 contentType : "application/json",
                 success: function (response) {
                     console.log(response)
+                    window.location.reload();
                 }
             })
         }
         function button(id) {
             let buttonHtml = `
-            <div class="col-12">
-                <button type="submit" class="btn btn-primary" onclick="deleteArticle(${id})">게시글 삭제하기</button>
-            </div>
-            <div class="col-12">
-                <button type="submit" class="btn btn-primary" onclick="window.location.href = '/community.html'">글 목록</button>
-            </div>
+<span class="badge bg-secondary" onclick="deleteArticle(${id})">게시글 삭제하기</span>
+<span class="badge bg-secondary" onclick="window.location.href = '/community.html'">글 목록</span>
+<span class="badge bg-secondary" onclick="window.location.href = '/write.html'">글쓰기</span>
             `
             $("#buttonContainer").append(buttonHtml);
         }
@@ -205,7 +244,8 @@
                 type : "DELETE",
                 url:`/article/${id}`,
                 success : function(response) {
-                    alert("삭제 완료!")
+                    alert(response)
+                    window.location.href = 'community.html';
                 }
             })
         }
@@ -216,6 +256,25 @@
                 url:`/article/comment/${id}`,
                 success : function(response) {
                     alert("삭제 완료!")
+                    console.log(response)
+                }
+            })
+        }
+
+        function voteCount(id,option) {
+            console.log(id,option)
+            let data = {
+             "id" : id,
+             "optionType" : option
+            }
+            $.ajax({
+                type : 'POST',
+                url : '/vote',
+                contentType : 'application/json',
+                data : JSON.stringify(data),
+                success : function(response) {
+                    alert("투표하셨습니다! 중복투표가 가능합니다.")
+                    window.location.reload();
                 }
             })
         }
@@ -243,24 +302,25 @@
         </div>
     </header>
     <!--본문-->
-    글 보기
-    <div id="contentContainers">
+    <div class="contentContainerContainer" style="width: 800px; margin:20px auto 20px auto;">
+        <div id="contentContainers">
 
 
-    </div>
-    <div id="buttonContainer">
+        </div>
+        <div id="buttonContainer" style="text-align: right; margin-bottom: 20px;">
 
 
-    </div>
+        </div>
 
-    <div id="commentContainers">
-
-
-    </div>
-
-    <div id="commentList">
+        <div id="commentContainers">
 
 
+        </div>
+
+        <div id="commentList">
+
+
+        </div>
     </div>
 
 
