테스트: posting의 Status accepted 인 food 만 가져오는 테스트

--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -97,22 +97,21 @@
     <main id="content-wrap">
         <div class="profile" style="width:852px; margin:auto;">
             <div id="profile_pic" style="margin:30px 20px 20px 20px;">
-
             </div>
-            <div style="margin-top:10px; margin-left:20px; float:left; ">
-                <span>@</span>
-                <span id="welcomename"></span>
-                <br/>
-                <span id="usercomment"></span><br/>
-                <span class="badge text-dark" style="background-color: #5ee1b4;"
-                      onclick="statusMessageModify()">메세지 수정</span>
-                <form id="images" enctype="multipart/form-data" style="display: inline-block;">
-                    <label for="chooseFile">
-                        <span class="badge text-dark" style="background-color: #5ee1b4;">프로필 사진 수정</span>
-                    </label>
-                    <input type="file" id="chooseFile" name="images" accept="image/*" onchange="profilePicUpload(this)">
-                </form>
-            </div>
+<!--            <div style="margin-top:10px; margin-left:20px; float:left; ">-->
+<!--                <span>@</span>-->
+<!--                <span id="welcomename"></span>-->
+<!--                <br/>-->
+<!--                <span id="usercomment"></span><br/>-->
+<!--                <span class="badge text-dark" style="background-color: #5ee1b4;"-->
+<!--                      onclick="statusMessageModify()">메세지 수정</span>-->
+<!--                <form id="images" enctype="multipart/form-data" style="display: inline-block;">-->
+<!--                    <label for="chooseFile">-->
+<!--                        <span class="badge text-dark" style="background-color: #5ee1b4;">프로필 사진 수정</span>-->
+<!--                    </label>-->
+<!--                    <input type="file" id="chooseFile" name="images" accept="image/*" onchange="profilePicUpload(this)">-->
+<!--                </form>-->
+<!--            </div>-->
             <div class="none-box" style="height: 10px; clear:left;"></div>
             <div id="user-table">
             </div>
