--- a/src/main/resources/static/mypage.html
+++ b/src/main/resources/static/mypage.html
@@ -87,6 +87,7 @@
                     <a href="/" class="title nav-text" style="padding-top: 5px;">오늘 뭐 먹지?</a>
                     <a href="/recommend.html" class="nave-menu-text nav-menu">뭐먹을지 추천받기</a>
                     <a href="/posting.html" class="nave-menu-text nav-menu">맛있는거 추천하기</a>
+                    <a href="/collect.html" class="nave-menu-text nav-menu">모든음식 모아보기</a>
                 </div>
                 <div class="nav-botton-box">
                     <button class="nav-button" id="logout">로그아웃</button>
