community 기능 도메인 url 변경

--- a/src/main/resources/static/community.html
+++ b/src/main/resources/static/community.html
@@ -64,7 +64,7 @@
 
             $.ajax({
                 type : 'GET',
-                url : '/articles',
+                url : `${apiUrl}/articles`,
                 success : function(response) {
                     console.log(response)
                     for (var i = 0; i < response.length; i++) {
