수정 - 회원가입 관리자 checked 로 잘못 설정 되어 있는 js 수정

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -252,8 +252,7 @@
                 username: $("#loginusername").val(),
                 password: $("#password").val(),
                 email: $("#email").val(),
-                admin:checkBox.checked,
-                adminToken:$("#admin-token").val()
+                // adminToken:$("#admin-token").val()
             }
             $.ajax({
                 type: 'POST',
