--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -251,8 +251,9 @@
             let info = {
                 username: $("#loginusername").val(),
                 password: $("#password").val(),
-                email: $("#email").val(),
+                email: $("#email").val()
             }
+
             $.ajax({
                 type: 'POST',
                 url: `${apiUrl}/signup`,
